# aeroslot-scheduler

./: .env.example  .gitignore  AeroSlot_Comprehensive_Documentation.docx  AeroSlot_Dashboard_System_Complete_Explanation.docx  Airport_prompt.md  Prompt.txt  README.md  SLIDE 1 Project Introduction Slide.md  generate_aeroslot_docs.py  generate_dashboard_explanation_doc.py  launch_system.py  system_parameters.md
Datasets/preprocessing/: clean_data.py  download_amelia.py  feature_engineering.py  merge_datasets.py  validate_data.py
SchedulerEngine/: CMakeLists.txt
SchedulerEngine/include/: Aircraft.h  AircraftFactory.h  ConflictDetector.h  ConstraintManager.h  EmergencyManager.h  FCFSStrategy.h  Flight.h  GreedyStrategy.h  IEmergencyObserver.h  ISchedulerStrategy.h  IntervalTree.h  PriorityStrategy.h  Runway.h  RunwayResourceManager.h  RunwayStateManager.h  Scheduler.h  SchedulerPolicyManager.h  WakeSeparationManager.h
cpp_scheduler/: CMakeLists.txt
cpp_scheduler/benchmarks/: master_runner.py
cpp_scheduler/benchmarks/metrics/: fairness.py
cpp_scheduler/include/models/: Aircraft.h  Runway.h
cpp_scheduler/include/strategies/: ConflictDetector.h  Scheduler.h
cpp_scheduler/src/: bindings.cpp  main.cpp
cpp_scheduler/src/models/: Aircraft.cpp  Runway.cpp
cpp_scheduler/src/strategies/: ConflictDetector.cpp  Scheduler.cpp
cpp_scheduler/tests/: test_aircraft.cpp
frontend/: package-lock.json  package.json
python_ai/: api_server.py  db_config.py  db_service.py  feature_store.py  init_db.py  main.py  model_registry.py  package-lock.json  requirements.txt
(+20 files in other folders)
